# happstack-auth

./: .gitignore  Auth.hs  Main.hs  README  TODO  happstack-auth.cabal
demo/: Main.hs  login.html
demo/Blog-Auth/: Main.hs  login.html  new_post.html
demo/Blog-NoAuth/: Main.hs  new_post.html
src/Happstack/: Auth.hs
